style.css
html, body {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    margin:0%;
    background-color: rgb(70, 70, 70);
    color:white;
    height:100%;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}

.main {
    display:flex;
    justify-content: center;
    align-items: start;
    height:100%;
}

.homepagelink {
    color:white;
    text-decoration: none;
}
.sidebarlink:link {
    color:rgb(187, 24, 24);
    text-decoration: none;
}
.sidebarlink:visited {
    color:rgb(214, 61, 61);
    text-decoration: none;
}
.sidebarlink:hover {
    color:rgb(255, 95, 95);
    text-decoration: none;
}
.sidebarlink:active {
    color:rgb(255, 95, 95);
    text-decoration: none;
}

.defaultlink:link {
    color:rgb(212, 37, 37);
    text-decoration: none;
}
.defaultlink:visited {
    color:rgb(233, 69, 69);
    text-decoration: none;
}
.defaultlink:hover {
    color:rgb(255, 102, 102);
    text-decoration: none;
}
.defaultlink:active {
    color:rgb(255, 102, 102);
    text-decoration: none;
}

